--- a/Graduate Admission Classification.ipynb
+++ b/Graduate Admission Classification.ipynb
@@ -243,7 +243,7 @@
    ],
    "source": [
     "# Loading the dataset\n",
-    "df = pd.read_csv('Admission_Predict_Ver1.1.csv')\n",
+    "df = pd.read_csv('https://github.com/Sruthi-lakshmi/Graduate_Admission_Classification/raw/main/Admission_Predict_Ver1.1.csv')\n",
     "df"
    ]
   },
